force-app/main/default/objects/breg_Transaction_Address__c/breg_Transaction_Address__c.object-meta.xml
<CustomObject>
    <label>BREG Transaction Address</label>
    <nameField>
        <label>BREG Transaction Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BREG Transaction Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>