force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_Account__c.field-meta.xml
<CustomField>
    <fullName>breg_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BREG Related Transaction Addresses</relationshipLabel>
    <relationshipName>BREG_Related_Transaction_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>