force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_Account_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>breg_Account_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-2367</description>
    <label>Account Affiliation</label>
    <referenceTo>breg_Account_Affiliation__c</referenceTo>
    <relationshipLabel>BREG Transaction Addresses</relationshipLabel>
    <relationshipName>BREG_Transaction_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>