force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_Address_StateText__c.field-meta.xml
<CustomField>
    <fullName>breg_Address_StateText__c</fullName>
    <description>Aalta BREG-2363</description>
    <label>Address StateText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>