force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_Affiliation_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Affiliation_Name__c</fullName>
    <formula>breg_Account_Affiliation__r.breg_Affiliation_Name__c</formula>
    <label>Affiliation Name</label>
    <type>Text</type>
</CustomField>