force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_BRIM_ADDRESS_LINE_2__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_ADDRESS_LINE_2__c</fullName>
    <label>ADDRESS_LINE_2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>