force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_BRIM_ADDRESS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_ADDRESS_TYPE__c</fullName>
    <label>ADDRESS_TYPE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>