force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_BRIM_FACSIMILE__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_FACSIMILE__c</fullName>
    <label>FACSIMILE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>