force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_Email__c.field-meta.xml
<CustomField>
    <fullName>breg_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>