force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_End_Date__c.field-meta.xml
<CustomField>
    <fullName>breg_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>