force-app/main/default/objects/breg_Transaction_Address__c/fields/BREG_Pending_Transaction__c.field-meta.xml
<CustomField>
    <fullName>BREG_Pending_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BREG Pending Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>BREG Transaction Addresses (BREG Pending Transaction)</relationshipLabel>
    <relationshipName>BREG_Transaction_Addresses1</relationshipName>
    <type>Lookup</type>
</CustomField>