force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_Phone__c.field-meta.xml
<CustomField>
    <fullName>breg_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>