force-app/main/default/objects/breg_Transaction_Address__c/fields/breg_TN_TM_SM__c.field-meta.xml
<CustomField>
    <fullName>breg_TN_TM_SM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-3446</description>
    <label>TN/TM/SM</label>
    <referenceTo>breg_TN_TM_SM__c</referenceTo>
    <relationshipLabel>BREG Transaction Addresses</relationshipLabel>
    <relationshipName>BREG_Transaction_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>