force-app/main/default/objects/breg_Transaction_Address__c/fields/BREG_Transaction__c.field-meta.xml
<CustomField>
    <fullName>BREG_Transaction__c</fullName>
    <label>BREG Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>BREG Transaction Addresses</relationshipLabel>
    <relationshipName>BREG_Transaction_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>